<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_geofence_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="au.com.wallaceit.onguard.GeofenceSettingsActivity">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/name_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/name_input"
        android:layout_below="@+id/name_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/location_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/textView2" />

    <Button
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/edit_location_btn" />

    <TextView
        android:text="@string/radius_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radius_text"
        android:layout_alignBottom="@+id/edit_location_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/edit_location_btn"
        android:layout_toStartOf="@+id/edit_location_btn" />

    <TextView
        android:text="@string/longitude_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latitude_text"
        android:layout_above="@+id/longitude_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/edit_location_btn"
        android:layout_toStartOf="@+id/edit_location_btn" />

    <TextView
        android:text="@string/latitude_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitude_text"
        android:layout_above="@+id/radius_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/edit_location_btn"
        android:layout_toStartOf="@+id/edit_location_btn" />

    <TextView
        android:text="@string/enter_action_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radius_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/enter_action_label"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/enter_action_button"
        android:layout_toStartOf="@+id/enter_action_button" />

    <com.multispinner.MultiSelectSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_action_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/enter_action_spinner"
        android:layout_toLeftOf="@+id/enter_action_button"
        android:layout_toStartOf="@+id/enter_action_button" />

    <Button
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_action_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_alignTop="@+id/enter_action_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/exit_action_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_action_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/exit_action_label"
        android:layout_marginTop="12dp"
        android:layout_toLeftOf="@+id/exit_action_button"
        android:layout_toStartOf="@+id/exit_action_button" />

    <com.multispinner.MultiSelectSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exit_action_spinner"
        android:layout_below="@+id/exit_action_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/exit_action_button"
        android:layout_toStartOf="@+id/exit_action_button" />

    <Button
        android:text="@string/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exit_action_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_alignTop="@+id/exit_action_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
